# proxy-for-distribution-Server

./: CMakeLists.txt  README.md  引力计划项目总结.docx
include/: http_helper.h  memorypool.h  pool.h  server_monitor.h  structure.h  work_process.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cc
src/log/: CMakeLists.txt  blocking_queue.cc  blocking_queue.h  mini_buffer.cc  mini_buffer.h  mini_log.cc  mini_log.h
src/proxy/: CMakeLists.txt  proxy.cc  server_monitor.cc
src/server_loginout/: CMakeLists.txt  server_loginout.cc
src/server_service/: CMakeLists.txt  Connection.cpp  connection.h  connectionPool.h  controller.cpp  controller.h  dbConnectionPool.cpp  main.cc  mainServer.cpp  server.h  thread.cpp  thread.h  threadPool.cpp  threadPool.h  view.cpp  view.h
test/include/: struture.h
test/include/proxy/: pool.h
test/src/client/: client.cc
test/src/proxy/: main.cc
test/src/server/: server.cc
